# esp-hosted-open

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: symbol-reference.md
docs/symbols/: esp32.phy.txt  esp32c2.phy.txt  esp32c3.phy.txt  esp32c5.phy.txt  esp32c6.phy.txt  esp32c61.phy.txt  esp32h2.phy.txt  esp32h4.phy.txt  esp32s2.phy.txt  esp32s3.phy.txt
esp_hosted_open/include/: esp_hosted_open.h  phy_rpc_proto.h
esp_hosted_open/src/: phy_rpc.c
examples/host_p4_demo/: CMakeLists.txt  sdkconfig.defaults
examples/host_p4_demo/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/: MANIFEST  README.md  flash.sh
host/: CMakeLists.txt
host/include/: esp_hosted_open.h  phy_rpc_proto.h
host/src/: phy_rpc.c
slave/: CMakeLists.txt  sdkconfig.defaults
slave/components/phy_rpc_overlay/: CMakeLists.txt  Kconfig.projbuild  phy_rpc_extras.c  phy_rpc_handlers.c  phy_rpc_overlay.c  phy_rpc_wireless.c
slave/main/: CMakeLists.txt
tests/host/: Makefile  mock_esp_hosted.c  test_dispatcher.c  test_main.c  test_proto.c
tests/host/shims/: esp_err.h  esp_hosted_misc.h  esp_log.h
tests/host/shims/freertos/: FreeRTOS.h  semphr.h  task.h
